--- a/aldershot-service/index.html
+++ b/aldershot-service/index.html
@@ -115,25 +115,28 @@
                     Aldershot</h1>
 
                 <!-- Subtitle -->
-                <h2 class="welcome-subtitle">Your Professional House &
-                    Commercial Cleaning Partner in Aldershot and Surrounding
-                    Areas</h2>
+                <h2 class="welcome-subtitle">Your Local Expert for House &
+                    Commercial Cleaning Solutions</h2>
 
                 <!-- Content Grid -->
                 <div class="welcome-content">
                     <!-- Professionalism & Expertise -->
                     <div class="content-block">
-                        <h3 class="block-title">Professionalism & Expertise</h3>
+                        <h3 class="block-title">Immediate Service & Local
+                            Trust</h3>
                         <p class="block-text">
-                            <strong>Impeccable Cleaning by Vetted
-                                Experts:</strong> Our fully employed team
-                            members are professionally trained and
-                            comprehensively insured for all House, Flat, and
-                            Commercial Cleaning. We are dedicated to upholding
-                            the highest standards with each and every visit.
-                            Experience a bespoke cleaning service, meticulously
-                            tailored to your preferences and needs in Aldershot
-                            and the surrounding area.
+                            <strong>The Aldershot Home Cleaning
+                                Specialists:</strong> Bantha Cleaning provides
+                            reliable, results-driven service right here in
+                            Aldershot. As your true local experts, we are fully
+                            committed to the homes and businesses in our
+                            community. Our fully employed team members are
+                            professionally trained, vetted, and comprehensively
+                            insured, offering efficient Residential Home Care
+                            that starts at just £16 per hour! Experience a
+                            transparent, hassle-free service delivering spotless
+                            results meticulously tailored to your unique
+                            requirements.
                         </p>
                     </div>
 
@@ -142,29 +145,28 @@
                         <h3 class="block-title">Our 100% Satisfaction
                             Guarantee</h3>
                         <p class="block-text">
-                            <strong>Guaranteed Clean, Guaranteed Trust:</strong>
-                            Bantha Cleaning thrives on delivering exceptional
-                            customer service and maintaining a truly sparkling
-                            home or business. We confidently offer a 100%
-                            Satisfaction Guarantee for all our professional
-                            cleaning services, ensuring you're delighted after
-                            every visit. As your reliable, trusted local partner
-                            in Aldershot, your peace of mind is our priority.
+                            <strong>Local Guarantee, Global Standards:</strong>
+                            Bantha Cleaning is committed to earning the
+                            long-term trust of our Aldershot clients. We
+                            confidently offer a 100% Satisfaction Guarantee for
+                            all our cleaning services, ensuring you are
+                            delighted with the immaculate condition of your home
+                            or office after every visit. Your peace of mind is
+                            the foundation of our local partnership.
                         </p>
                     </div>
 
                     <!-- Serving Aldershot and Beyond -->
                     <div class="content-block">
-                        <h3 class="block-title">Serving Aldershot and
-                            Beyond</h3>
+                        <h3 class="block-title">Serving Aldershot and the Local
+                            Area</h3>
                         <p class="block-text">
-                            <strong>Local Experts Serving Hampshire:</strong>
-                            Our professional domestic and commercial cleaning
-                            services in Aldershot extend to Winchester,
-                            Basingstoke,
-                            Andover, Camberley, Farnham, and a host of other
-                            neighbouring communities within our 60-mile service
-                            radius.
+                            <strong>Fast Service Radius Coverage:</strong>
+                            Our professional cleaning services are readily
+                            available throughout Aldershot, extending our swift
+                            service to nearby areas like Farnham, Fleet,
+                            Farnborough, and Ash Vale, covering all communities
+                            within our immediate 60-mile service radius.
                         </p>
                     </div>
 
@@ -172,11 +174,12 @@
                     <div class="content-block">
                         <h3 class="block-title">Commitment to Community</h3>
                         <p class="block-text">
-                            <strong>More Than Clean Homes – Building a Stronger
-                                Community:</strong> At Bantha Cleaning, we take
-                            pride in not only delivering exceptional cleaning
-                            but also in supporting the local Aldershot community
-                            that we cherish.
+                            <strong>More Than Clean Spaces – Supporting Our
+                                Town:</strong> At Bantha Cleaning, we take
+                            immense pride in supporting our local economy and
+                            community. We view our work in Aldershot as a direct
+                            investment in the health and professionalism of the
+                            town we call home.
                         </p>
                     </div>
 
