--- a/farnborough-service/index.html
+++ b/farnborough-service/index.html
@@ -108,28 +108,18 @@
             <div class="welcome-container">
                 <!-- Main Title -->
                 <h1 class="welcome-title">Welcome to Bantha Cleaning
-                    Famborough</h1>
+                    Farnborough</h1>
 
                 <!-- Subtitle -->
-                <h2 class="welcome-subtitle">Your Professional House &
-                    Commercial Cleaning Partner in Famborough and Surrounding
-                    Areas</h2>
+                <h2 class="welcome-subtitle">Systematic Cleaning Solutions for Modern Homes & Offices</h2>
 
                 <!-- Content Grid -->
                 <div class="welcome-content">
                     <!-- Professionalism & Expertise -->
                     <div class="content-block">
-                        <h3 class="block-title">Professionalism & Expertise</h3>
+                        <h3 class="block-title">Expertise in Modern Environments</h3>
                         <p class="block-text">
-                            <strong>Impeccable Cleaning by Vetted
-                                Experts:</strong> Our fully employed team
-                            members are professionally trained and
-                            comprehensively insured for all House, Flat, and
-                            Commercial Cleaning. We are dedicated to upholding
-                            the highest standards with each and every visit.
-                            Experience a bespoke cleaning service, meticulously
-                            tailored to your preferences and needs in Famborough
-                            and the surrounding area.
+                            <strong>Systematic Cleaning by Fully Vetted Experts:</strong> Bantha Cleaning offers precise, systematic service tailored for the modern homes and corporate environments of Farnborough. We understand that in a tech-focused community, efficiency and reliability are paramount. Our fully employed team members are professionally trained and comprehensively insured, utilizing modern techniques to ensure a flawless and hygienic finish. Experience a structured, efficient cleaning process that delivers predictable, sparkling results.
                         </p>
                     </div>
 
@@ -138,28 +128,17 @@
                         <h3 class="block-title">Our 100% Satisfaction
                             Guarantee</h3>
                         <p class="block-text">
-                            <strong>Guaranteed Clean, Guaranteed Trust:</strong>
-                            Bantha Cleaning thrives on delivering exceptional
-                            customer service and maintaining a truly sparkling
-                            home or business. We confidently offer a 100%
-                            Satisfaction Guarantee for all our professional
-                            cleaning services, ensuring you're delighted after
-                            every visit. As your reliable, trusted local partner
-                            in Famborough, your peace of mind is our priority.
+                            <strong>Reliability You Can Trust:</strong>
+                            Bantha Cleaning is committed to upholding the highest standards of service for every client in Farnborough. We confidently offer a 100% Satisfaction Guarantee for all our cleaning services, ensuring you are delighted with the immaculate condition of your property. Choose us as your reliable partner for consistent, high-quality maintenance.
                         </p>
                     </div>
 
                     <!-- Serving Famborough and Beyond -->
                     <div class="content-block">
-                        <h3 class="block-title">Serving Famborough and
-                            Beyond</h3>
+                        <h3 class="block-title">Serving Farnborough and the Local Area</h3>
                         <p class="block-text">
-                            <strong>Local Experts Serving Hampshire:</strong>
-                            Our professional domestic and commercial cleaning
-                            services in Famborough extend to Winchester, Basingstoke,
-                            Andover, Fleet, Aldershot, Camberley, Farnham, and a host of other
-                            neighbouring communities within our 60-mile service
-                            radius.
+                            <strong>Fast Service for the M3 Corridor:</strong>
+                            Our professional cleaning services are readily available throughout Farnborough, extending our expert coverage to nearby areas like Aldershot, Fleet, Camberley, and Hook, serving all communities within our immediate 60-mile service radius.
                         </p>
                     </div>
 
@@ -167,11 +146,7 @@
                     <div class="content-block">
                         <h3 class="block-title">Commitment to Community</h3>
                         <p class="block-text">
-                            <strong>More Than Clean Homes – Building a Stronger
-                                Community:</strong> At Bantha Cleaning, we take
-                            pride in not only delivering exceptional cleaning
-                            but also in supporting the local Famborough community
-                            that we cherish.
+                            <strong>More Than Clean Spaces – Supporting Local Innovation:</strong> t Bantha Cleaning, we take pride in supporting the high standards of the Farnborough community. We view our work as essential to maintaining a clean, professional, and healthy environment, allowing our clients to focus on their busy, innovative lives.
                         </p>
                     </div>
 
