--- a/andover-service/index.html
+++ b/andover-service/index.html
@@ -12,9 +12,10 @@
         <link rel="shortcut icon" type="image/png" href="../webimg/logontp.png">
         <link rel="apple-touch-icon" href="../webimg/logontp.png">
         <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17423777103">
+        <script async
+            src="https://www.googletagmanager.com/gtag/js?id=AW-17423777103">
 </script>
-<script>
+        <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -24,84 +25,87 @@
     </head>
     <body>
         <header class="header">
-    <div class="header-container">
-        <!-- Logo -->
-        <div class="logo-section">
-            <a href="/">
-                <img src="../webimg/logo.png" alt="Company Logo" class="logo">
-            </a>
-        </div>
+            <div class="header-container">
+                <!-- Logo -->
+                <div class="logo-section">
+                    <a href="/">
+                        <img src="../webimg/logo.png" alt="Company Logo"
+                            class="logo">
+                    </a>
+                </div>
 
-        <!-- Opening Hours (Desktop) -->
-        <div class="opening-hours">
-            <h3 id="hours-title">Opening Hours Today</h3>
-            <div class="current-hours">
-                <span class="status-dot" id="status-dot"></span>
-                <span id="current-day"></span> - <span id="current-hours"></span>
-            </div>
-        </div>
+                <!-- Opening Hours (Desktop) -->
+                <div class="opening-hours">
+                    <h3 id="hours-title">Opening Hours Today</h3>
+                    <div class="current-hours">
+                        <span class="status-dot" id="status-dot"></span>
+                        <span id="current-day"></span> - <span
+                            id="current-hours"></span>
+                    </div>
+                </div>
 
-        <!-- Navigation -->
-        <nav class="nav-menu">
-            <div class="nav-item">
-                <a href="/" class="nav-link">Home</a>
-            </div>
-            <div class="nav-item">
-                <a href="#" class="nav-link services-toggle">
-                    Services
-                    <span class="dropdown-arrow">▼</span>
-                </a>
-                <div class="dropdown">
-                    <a href="../generalcleaning/">General Cleaning</a>
-                    <a href="../deepcleaning/">Deep Cleaning</a>
+                <!-- Navigation -->
+                <nav class="nav-menu">
+                    <div class="nav-item">
+                        <a href="/" class="nav-link">Home</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#" class="nav-link services-toggle">
+                            Services
+                            <span class="dropdown-arrow">▼</span>
+                        </a>
+                        <div class="dropdown">
+                            <a href="../generalcleaning/">General Cleaning</a>
+                            <a href="../deepcleaning/">Deep Cleaning</a>
+                        </div>
+                    </div>
+                    <div class="nav-item">
+                        <a href="#" class="nav-link areas-toggle">
+                            Areas We Cover
+                            <span class="dropdown-arrow">▼</span>
+                        </a>
+                        <div class="dropdown">
+                            <a href="../winchester-service/">Winchester</a>
+                            <a href="../andover-service/">Andover</a>
+                            <a href="../basingstoke-service/">Basingstoke</a>
+                            <a href="../aldershot-service/">Aldershot</a>
+                            <a href="../fleet-service/">Fleet</a>
+                            <a href="../farnborough-service/">Farnborough</a>
+                            <a href="../farnham-service/">Farnham</a>
+                            <a href="../hook-service/">Hook</a>
+                            <a href="../woking-service/">Woking</a>
+                            <a href="../ash-vale-service/">Ash Vale</a>
+                        </div>
+                    </div>
+                    <div class="nav-item">
+                        <a href="../blog/" class="nav-link">Blog</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="../contact/" class="nav-link">Contact</a>
+                    </div>
+                </nav>
+
+                <!-- Hamburger Menu -->
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
-            <div class="nav-item">
-                <a href="#" class="nav-link areas-toggle">
-                    Areas We Cover
-                    <span class="dropdown-arrow">▼</span>
-                </a>
-                                <div class="dropdown">
-                    <a href="../winchester-service/">Winchester</a>
-                    <a href="../andover-service/">Andover</a>
-                    <a href="../basingstoke-service/">Basingstoke</a>
-                    <a href="../aldershot-service/">Aldershot</a>
-                    <a href="../fleet-service/">Fleet</a>
-                    <a href="../farnborough-service/">Farnborough</a>
-                    <a href="../farnham-service/">Farnham</a>
-                    <a href="../hook-service/">Hook</a>
-                    <a href="../woking-service/">Woking</a>
-                    <a href="../ash-vale-service/">Ash Vale</a>
+
+            <!-- Mobile Overlay -->
+            <div class="mobile-overlay"></div>
+
+            <!-- MOVED: Mobile Opening Hours (outside nav-menu for fixed positioning) -->
+            <div class="mobile-opening-hours">
+                <h3>Opening Hours Today</h3>
+                <div class="current-hours">
+                    <span class="status-dot" id="mobile-status-dot"></span>
+                    <span id="mobile-current-day"></span> - <span
+                        id="mobile-current-hours"></span>
                 </div>
             </div>
-            <div class="nav-item">
-                <a href="../blog/" class="nav-link">Blog</a>
-            </div>
-            <div class="nav-item">
-                <a href="../contact/" class="nav-link">Contact</a>
-            </div>
-        </nav>
-
-        <!-- Hamburger Menu -->
-        <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </div>
-
-    <!-- Mobile Overlay -->
-    <div class="mobile-overlay"></div>
-    
-    <!-- MOVED: Mobile Opening Hours (outside nav-menu for fixed positioning) -->
-    <div class="mobile-opening-hours">
-        <h3>Opening Hours Today</h3>
-        <div class="current-hours">
-            <span class="status-dot" id="mobile-status-dot"></span>
-            <span id="mobile-current-day"></span> - <span id="mobile-current-hours"></span>
-        </div>
-    </div>
-</header>
+        </header>
 
         <!-- Welcome Section -->
         <section class="welcome-section">
@@ -111,67 +115,66 @@
                     Andover</h1>
 
                 <!-- Subtitle -->
-                <h2 class="welcome-subtitle">Your Professional House &
-                    Commercial Cleaning Partner in Andover and Surrounding
-                    Areas</h2>
+                <h2 class="welcome-subtitle">Andover’s Most Reliable Residential
+                    & Commercial Cleaning Solutions</h2>
 
                 <!-- Content Grid -->
                 <div class="welcome-content">
                     <!-- Professionalism & Expertise -->
                     <div class="content-block">
-                        <h3 class="block-title">Professionalism & Expertise</h3>
+                        <h3 class="block-title">Focused Expertise & Speed</h3>
                         <p class="block-text">
-                            <strong>Impeccable Cleaning by Vetted
-                                Experts:</strong> Our fully employed team
-                            members are professionally trained and
-                            comprehensively insured for all House, Flat, and
-                            Commercial Cleaning. We are dedicated to upholding
-                            the highest standards with each and every visit.
-                            Experience a bespoke cleaning service, meticulously
-                            tailored to your preferences and needs in Andover
-                            and the surrounding area.
+                            <strong>Guaranteed Clean, Dependable
+                                Service:</strong> Our local team understands the
+                            demands of Andover’s fast-paced environment. Unlike
+                            other services, Bantha Cleaning prioritizes speed,
+                            security, and consistent quality. Our fully employed
+                            professionals are rigorously background-checked and
+                            comprehensively insured, ensuring maximum peace of
+                            mind with every visit. Whether you need a quick
+                            refresh or a detailed, specialized service, we
+                            guarantee dependable results tailored to your exact
+                            schedule.
                         </p>
                     </div>
 
                     <!-- 100% Satisfaction Guarantee -->
                     <div class="content-block">
-                        <h3 class="block-title">Our 100% Satisfaction
-                            Guarantee</h3>
+                        <h3 class="block-title">Specialized Service
+                            Spotlight</h3>
                         <p class="block-text">
-                            <strong>Guaranteed Clean, Guaranteed Trust:</strong>
-                            Bantha Cleaning thrives on delivering exceptional
-                            customer service and maintaining a truly sparkling
-                            home or business. We confidently offer a 100%
-                            Satisfaction Guarantee for all our professional
-                            cleaning services, ensuring you're delighted after
-                            every visit. As your reliable, trusted local partner
-                            in Andover, your peace of mind is our priority.
+                            <strong>100% Satisfaction Guarantee:</strong>
+                            We confidently offer a 100% Satisfaction Guarantee
+                            for all our professional cleaning services, ensuring
+                            you’re delighted after every single visit. This
+                            commitment is central to our mission as your trusted
+                            Andover cleaning partner.
                         </p>
                     </div>
 
                     <!-- Serving Andover and Beyond -->
                     <div class="content-block">
-                        <h3 class="block-title">Serving Andover and
-                            Beyond</h3>
+                        <h3 class="block-title">Covering Your Community in North
+                            Hampshire</h3>
                         <p class="block-text">
-                            <strong>Local Experts Serving Hampshire:</strong>
-                            Our professional domestic and commercial cleaning
-                            services in Andover extend to Winchester, Aldershot,
-                            Basingstoke, Camberley, Farnham, and a host of other
-                            neighbouring communities within our 60-mile service
-                            radius.
+                            <strong>Your Local Experts for Flexible
+                                Cleaning:</strong>
+                            We offer essential domestic and commercial cleaning
+                            services directly in Andover, extending our reliable
+                            service to nearby areas like Basingstoke, Fleet, and
+                            Hook, within our 60-mile service radius.
                         </p>
                     </div>
 
                     <!-- Commitment to Community -->
                     <div class="content-block">
-                        <h3 class="block-title">Commitment to Community</h3>
+                        <h3 class="block-title">Beyond the Tidy Up</h3>
                         <p class="block-text">
-                            <strong>More Than Clean Homes – Building a Stronger
-                                Community:</strong> At Bantha Cleaning, we take
-                            pride in not only delivering exceptional cleaning
-                            but also in supporting the local Andover community
-                            that we cherish.
+                            <strong>More Than Clean Spaces – Saving Your Time:
+                                At Bantha Cleaning,</strong> we take pride in
+                            supporting the busy lives of the Andover community.
+                            Our goal is to handle the mess so you can reclaim
+                            your valuable time and focus on what matters most.
                         </p>
                     </div>
 
