--- a/aldershot-service/index.html
+++ b/aldershot-service/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>House & Commercial Cleaning Services in Aldershot</title>
+        <title>Cleaning Services in Aldershot | Bantha Cleaning</title>
         <meta name="description"
             content="Need a trusted local cleaner in Aldershot Bantha Cleaning offers reliable house, deep, and commercial cleaning services. Book your free quote today!">
         <link rel="stylesheet" href="../headerandfooter.css">
