--- a/fleet-service/index.html
+++ b/fleet-service/index.html
@@ -309,7 +309,7 @@
                         <div class="contact-label">Email</div>
                         <div class="contact-value">
                             <a
-                                href="mailto:banthacleaningcompany.com">banthacleaningcompany.com</a>
+                                href="mailto:banthacleaningcompany@gmail.com">banthacleaningcompany@gmail.com</a>
                         </div>
                     </div>
                     <div class="contact-item">
