--- a/thankyou/index.html
+++ b/thankyou/index.html
@@ -241,8 +241,8 @@
           <div class="contact-item">
             <div class="contact-label">Email</div>
             <div class="contact-value">
-              <a href="mailto:banthacleaningcompany.com"
-                >banthacleaningcompany.com</a
+              <a href="mailto:banthacleaningcompany@gmail.com"
+                >banthacleaningcompany@gmail.com</a
               >
             </div>
           </div>
