--- a/deepcleaning/index.html
+++ b/deepcleaning/index.html
@@ -321,16 +321,16 @@
                     
                     <h3>What's Included in Our Deep Cleaning Service?</h3>
                     <ul>
-                        <li>✅ Comprehensive scrubbing of all surfaces</li>
-                        <li>✅ Full kitchen deep clean (including appliances)</li>
-                        <li>✅ Bathroom sanitization and descaling</li>
-                        <li>✅ Hard-to-reach areas (behind appliances, under furniture)</li>
-                        <li>✅ Window cleaning (internal)</li>
-                        <li>✅ Carpet and upholstery deep cleaning</li>
-                        <li>✅ Oven and extractor fan cleaning</li>
-                        <li>✅ Skirting boards and door frames</li>
-                        <li>✅ Light fixtures and switches</li>
-                        <li>✅ Professional vacuuming and mopping</li>
+                        <li>Comprehensive scrubbing of all surfaces</li>
+                        <li>Full kitchen deep clean (including appliances)</li>
+                        <li>Bathroom sanitization and descaling</li>
+                        <li>Hard-to-reach areas (behind appliances, under furniture)</li>
+                        <li>Window cleaning (internal)</li>
+                        <li>Carpet and upholstery deep cleaning</li>
+                        <li>Oven and extractor fan cleaning</li>
+                        <li>Skirting boards and door frames</li>
+                        <li>Light fixtures and switches</li>
+                        <li>Professional vacuuming and mopping</li>
                     </ul>
                 </div>
 
