--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
                 <!-- Right Side - Contact Form -->
                 <aside class="contact-form-container">
-                    <h2 class="form-title">Get In Touch</h2>
+                    <h2 class="form-title">Get Your Free Quote!!</h2>
                     <form class="contact-form" id="contactForm" aria-label="Contact form">
                         <!-- Row 1: Full Name and Postal Code -->
                         <div class="form-row">
