--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <meta name="geo.region" content="GB-HAM">
         <meta name="geo.placename" content="Aldershot">
         <meta name="geo.position" content="51.2485;-0.7631">
-        
+
+        <link rel="preload" as="image" href="webimg/studio-cleaning.webp" fetchpriority="high">
         <link rel="stylesheet" href="headerandfooter.css">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/png" href="webimg/logontp.png">
@@ -337,6 +338,11 @@
 
         <!-- Company Info & Contact Form Section -->
         <section class="info-contact-section">
+            <img src="webimg/studio-cleaning.webp" 
+         alt="" 
+         class="section-bg-image"
+         fetchpriority="high"
+         loading="eager">
             <div class="info-contact-container">
                 <!-- Left Side - Company Info -->
                 <article class="company-info">
