--- a/andover-service/index.html
+++ b/andover-service/index.html
@@ -7,7 +7,7 @@
         <meta name="description"
             content="Award-winning cleaning services in Andover. Trusted local house cleaners, deep cleaning & commercial cleaning. 100% satisfaction guarantee. Free quote today! ☎️ 07825183734">
         <meta name="keywords" content="Andover cleaning services, house cleaners Andover, commercial cleaning Andover, deep cleaning Andover, domestic cleaners North Hampshire">
-        <meta name="robots" content="index, follow" />
+        <meta name="robots" content="noindex, follow" />
         
         <!-- Open Graph / Social Media -->
         <meta property="og:type" content="website">
