--- a/ash-vale-service/index.html
+++ b/ash-vale-service/index.html
@@ -7,7 +7,7 @@
         <meta name="description"
             content="Trusted cleaning services in Ash Vale, Surrey. Local house cleaners, deep cleaning & commercial cleaning for border communities. 100% satisfaction guaranteed. Free quote! ☎️ 07825183734">
         <meta name="keywords" content="Ash Vale cleaning services, house cleaners Ash Vale, commercial cleaning Ash Vale, deep cleaning Ash Vale, domestic cleaners Surrey Hampshire border, local cleaners near me">
-        <meta name="robots" content="index, follow" />
+        <meta name="robots" content="noindex, follow">
         
         <!-- Open Graph / Social Media -->
         <meta property="og:type" content="website">
