--- a/hook-service/index.html
+++ b/hook-service/index.html
@@ -7,7 +7,7 @@
         <meta name="description"
             content="Reliable cleaning services in Hook, Hampshire. Trusted house cleaners, deep cleaning & commercial cleaning for commuter families. 100% satisfaction guaranteed. Free quote! ☎️ 07825183734">
         <meta name="keywords" content="Hook cleaning services, house cleaners Hook, commercial cleaning Hook, deep cleaning Hook, domestic cleaners Hart, village cleaners Hampshire">
-        <meta name="robots" content="index, follow" />
+        <meta name="robots" content="noindex, follow" />
         
         <!-- Open Graph / Social Media -->
         <meta property="og:type" content="website">
