--- a/woking-service/index.html
+++ b/woking-service/index.html
@@ -7,7 +7,7 @@
         <meta name="description"
             content="Expert cleaning services in Woking, Surrey. Trusted house cleaners, deep cleaning & commercial cleaning for urban properties. 100% satisfaction guaranteed. Free quote! ☎️ 07825183734">
         <meta name="keywords" content="Woking cleaning services, house cleaners Woking, commercial cleaning Woking, deep cleaning Woking, apartment cleaners Surrey, office cleaners Woking">
-        <meta name="robots" content="index, follow" />
+        <meta name="robots" content="noindex, follow" />
         
         <!-- Open Graph / Social Media -->
         <meta property="og:type" content="website">
