--- a/farnborough-service/index.html
+++ b/farnborough-service/index.html
@@ -7,7 +7,7 @@
         <meta name="description"
             content="Expert cleaning services in Farnborough, Hampshire. Trusted house cleaners, deep cleaning & commercial cleaning for aerospace town properties. 100% satisfaction guaranteed. Free quote! ☎️ 07825183734">
         <meta name="keywords" content="Farnborough cleaning services, house cleaners Farnborough, commercial cleaning Farnborough, deep cleaning Farnborough, office cleaners Rushmoor, aerospace business cleaning">
-        <meta name="robots" content="index, follow" />
+        <meta name="robots" content="noindex, follow" />
         
         <!-- Open Graph / Social Media -->
         <meta property="og:type" content="website">
