--- a/fleet-service/index.html
+++ b/fleet-service/index.html
@@ -7,7 +7,7 @@
         <meta name="description"
             content="Premium cleaning services in Fleet, Hampshire. Trusted house cleaners, deep cleaning & commercial cleaning for Hart district properties. 100% satisfaction guaranteed. Free quote! ☎️ 07825183734">
         <meta name="keywords" content="Fleet cleaning services, house cleaners Fleet, commercial cleaning Fleet, deep cleaning Fleet, domestic cleaners Hart, cleaners near Fleet Pond">
-        <meta name="robots" content="index, follow" />
+        <meta name="robots" content="noindex, follow" />
         
         <!-- Open Graph / Social Media -->
         <meta property="og:type" content="website">
