--- a/deepcleaning/index.html
+++ b/deepcleaning/index.html
@@ -370,13 +370,31 @@
 
 
     <!-- Hero Section -->
-    <section class="relative bg-gray-900 bg-cover bg-center h-96 flex items-center justify-center shadow-lg" style="background-image: url('../webimg/studio-cleaning.webp')">
-        <div class="absolute inset-0 bg-bantha-dark opacity-70"></div>
-        <div class="hero-content relative z-10 text-center max-w-4xl px-4">
-            <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold text-white mb-4 leading-tight">Deep Cleaning Services</h1>
-            <p class="text-lg text-gray-200">Our comprehensive and intensive Deep Cleaning services are designed to tackle hidden dirt and grime in your home or commercial space. Bantha Cleaning ensures your property is spotless, hygienic, and refreshed from top to bottom.</p>
+<section class="relative bg-gray-900 bg-cover bg-center py-20 flex items-center justify-center shadow-lg" style="background-image: url('../webimg/studio-cleaning.webp')">
+    <div class="absolute inset-0 bg-bantha-dark opacity-70"></div>
+    <div class="hero-content relative z-10 text-center max-w-4xl px-4">
+        <span class="inline-block text-sm font-semibold uppercase tracking-wider text-white bg-bantha-blue py-2 px-4 rounded-full mb-4 shadow-lg">
+            Serving Winchester City & Surrounding Villages
+        </span>
+        <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold text-white mb-4 leading-tight">
+            Deep Cleaning Services
+        </h1>
+        <p class="text-xl sm:text-2xl text-gray-200 mb-8">
+            Our comprehensive and intensive Deep Cleaning services are designed to tackle hidden dirt and grime in your home or commercial space. Bantha Cleaning ensures your property is spotless, hygienic, and refreshed from top to bottom.
+        </p>
+        <div class="flex flex-col sm:flex-row justify-center gap-4">
+            <a href="../contact/" class="inline-block bg-bantha-blue hover:bg-blue-700 text-white font-bold py-4 px-8 rounded-xl shadow-lg transition duration-300 transform hover:scale-105">
+                Request Your Free Quote
+            </a>
+            <a href="tel:+447825183734" class="inline-block bg-bantha-green hover:bg-green-700 text-white font-bold py-4 px-8 rounded-xl shadow-lg transition duration-300 transform hover:scale-105">
+                Call: 07825 183734
+            </a>
         </div>
-    </section>
+        <p class="mt-4 text-sm text-gray-300 font-medium">
+            100% Satisfaction Guaranteed | Fully Insured & Trained Team
+        </p>
+    </div>
+</section>
 
     <!-- Cleaning Info & Pricing Section -->
     <article class="py-16 bg-white">
@@ -457,14 +475,14 @@
     </div>
 
     <!-- CTA Buttons -->
-    <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
+    <!-- <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
         <a href="../contact/" class="flex-1 text-center cta-btn primary bg-bantha-blue hover:bg-blue-700 text-white py-4 rounded-lg font-extrabold shadow-lg transition duration-300">
             Get Free Quote
         </a>
         <a href="tel:+447825183734" class="flex-1 text-center cta-btn secondary bg-bantha-green hover:bg-green-700 text-white py-4 rounded-lg font-extrabold shadow-lg transition duration-300">
             Call: 07825 183734
         </a>
-    </div>
+    </div> -->
 </div>
             </div>
         </div>
