--- a/generalcleaning/index.html
+++ b/generalcleaning/index.html
@@ -502,14 +502,14 @@
                     </div>
 
                     <!-- CTA Buttons -->
-                    <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
+                    <!-- <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4">
                         <a href="../contact/" class="flex-1 text-center cta-btn primary bg-bantha-blue hover:bg-blue-700 text-white py-4 rounded-lg font-extrabold shadow-lg transition duration-300">
                             Get Free Quote
                         </a>
                         <a href="tel:+447825183734" class="flex-1 text-center cta-btn secondary bg-bantha-green hover:bg-green-700 text-white py-4 rounded-lg font-extrabold shadow-lg transition duration-300">
                             Call: 07825 183734
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
